--- a/src/app/components/goals/goals.component.html
+++ b/src/app/components/goals/goals.component.html
@@ -37,12 +37,12 @@
     <div class="flex items-center justify-center">
       <div class="flex">
         <!-- Card 1 -->
-        <div class="bg-white shadow h-full rounded-lg pl-8 py-3 w-[420px]">
+        <div class="bg-white shadow h-full rounded-lg pl-8 py-3 w-[420px] mr-4">
           <!-- Adjust width as necessary -->
           <div class="flex justify-between items-center mb-3">
             <div class="font-semibold">Savings Goal</div>
             <div class="relative">
-              <button class="bg-gray-100 text-gray-700 font-medium py-2 px-4 rounded items-center flex justify-center">
+              <button class="bg-gray-100 text-gray-700 font-medium py-2 px-4 rounded items-center flex justify-center mr-6">
                 <span>01 May - 31 May</span>
                 <svg class="fill-current h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                   <path d="M5.95 6.95L10 11l4.05-4.05.707.707L10 11.707l-4.757-4.757z" />
@@ -75,7 +75,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col mr-6">
               <!-- <div class="rounded-full bg-green-200 relative text-center">
                 <div class="">
                   <span class="text-xs text-gray-700">100%</span>
@@ -108,7 +108,7 @@
     <h2 class="font-normal">Expenses Goals by Category</h2>
   </div>
   <div class="flex justify-between">
-    <div class="w-96 pl-8 bg-white rounded-lg shadow-md flex items-center justify-between mr-2">
+    <div class="w-96 p-4 bg-white rounded-lg shadow-md flex items-center justify-between mr-2">
       <div class="flex items-center space-x-2">
         <!-- Icon -->
         <div class="p-2 bg-gray-100 rounded">
@@ -188,7 +188,7 @@
     </div>
   </div>
   <div class="flex mt-4 justify-between">
-    <div class="w-96 pl-8 bg-white rounded-lg shadow-md flex items-center justify-between mr-2">
+    <div class="w-96 p-4 bg-white rounded-lg shadow-md flex items-center justify-between mr-2">
       <div class="flex items-center space-x-2">
         <!-- Icon -->
         <div class="p-2 bg-gray-100 rounded">
