Add balance and expanance

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex bg-">
   <div class="w-60 py-12 px-5 bg-gray-800 text-white">
     <div class="">
       <h3 class="text-2xl font-extrabold mb-4 items-center justify-center flex">
@@ -285,7 +285,7 @@
           <div class="">
             <a
               class="flex items-center pl-2 py-2 mr-3 text-base hover:bg-teal-700 rounded-md"
-              [routerLink]="['/login']"
+              [routerLink]="['/']"
               routerLinkActive="router-link-active"
               role="button"
               ><svg
