--- a/src/app/components/expences/expences.component.html
+++ b/src/app/components/expences/expences.component.html
@@ -1,1 +1,244 @@
-<p>expences works!</p>
+<div class="w-[1250px] py-3 px-6">
+    <div class="flex items-center justify-between p-4 w-full">
+        <div class="flex items-center space-x-2">
+          <!-- <span class="text-lg font-semibold">Hello Tanzir</span> -->
+          <div class="flex items-center ml-1">
+            <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 11L6 6L1 1" stroke="#9F9F9F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 11L6 6L1 1" stroke="#9F9F9F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <span class="text-gray-500">May 19, 2023</span>
+        </div>
+        <div class="flex items-center space-x-4 ml-8">
+          <button class="relative">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z" />
+            </svg>
+            <!-- <span class="absolute top-0 right-0 inline-block w-2 h-2 bg-green-500 rounded-full"></span> -->
+          </button>
+          <div class="relative">
+            <input type="text" placeholder="Search here"
+              class="pl-4 pr-10 py-2 border rounded-full focus:outline-none focus:ring-2 focus:ring-gray-200" />
+            <svg class="w-5 h-5 text-gray-500 absolute right-3 top-1/2 transform -translate-y-1/2" fill="none"
+              stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+            </svg>
+          </div>
+        </div>
+    </div>
+    <div>
+        <h3 class="mt-3 px-6 font-normal text-2xl text-gray-500">Expanse Comparison</h3>
+    <div id="chart">
+        <apx-chart
+        class="mt-3 px-6 ml-3"
+          [series]="chartOptions.series!"
+          [chart]="chartOptions.chart!"
+          [dataLabels]="chartOptions.dataLabels!"
+          [plotOptions]="chartOptions.plotOptions!"
+          [yaxis]="chartOptions.yaxis!"
+          [legend]="chartOptions.legend!"
+          [fill]="chartOptions.fill!"
+          [stroke]="chartOptions.stroke!"
+          [tooltip]="chartOptions.tooltip!"
+          [xaxis]="chartOptions.xaxis!"
+        ></apx-chart>
+      </div>
+    </div>
+    <div class="">
+        <h2 class="pl-4 mb-2 text-lg text-gray-500">Expences Breakdown</h2>
+        <div class="grid grid-cols-3 gap-4">
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+            <div class="w-[380px] pb-2 bg-white  rounded-lg shadow-md mr-2">
+                <div class="py-4 pr-1 pl-4 bg-gray-100  rounded-lg shadow-md flex items-center justify-between">
+                    <div class="flex items-center space-x-2">
+                        <!-- Icon -->
+                        <div class="p-2 bg-gray-300 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+                        </div>
+                        <!-- Text Content -->
+                        <div class="">
+                          <span class="text-sm font-medium">Housing</span>
+                          <div class="">$250.00</div>
+                        </div>
+                      </div>
+                      <!-- Adjust Button -->
+                      <div class="flex justify-center items-center mr-3">
+                          <span class="text-sm font-bold text-gray-700 mr-2">15%</span>
+                          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8 12.6667V3.33333" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                              <path d="M3.33301 8L7.99967 3.33333L12.6663 8" stroke="#E73D1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                      </div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">House Rent</span>
+                    <div class="">$230.00</div>
+                </div>
+                <div class="flex justify-between items-center mx-4 my-4">
+                    <span class="text-sm font-medium">Parking</span>
+                    <div class="">$20.00</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
